--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "dateformat": "^3.0.3",
+    "ordinal": "^1.0.3",
     "router": "^1.3.3",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
